--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "vite": "^6.1.0"
   }
 }
